# Huidu

./: .gitignore  BOXPLAYER_DECOMPILATION.md  RUST_REPRODUCTION_PLAN.md  ZBIN_Firmware_Analysis.md
firmware_extract/PX30_D15/: S21mountall.sh  device_locker.sh  fpga_D15.img  pppd  run.sh  ssl.tar  stop_all.sh  upgrade.sh  wifi_D15.sh
firmware_extract/PX30_D15/BoxPlayer/: BoxPlayer  BoxSDK  ME3760_Pppoe.sh  ME3760_Pppoe_Connect.sh  WeatherCodeTrancelate.xml  dhcpd.conf  libBoxIOServices.so.1.0.0  libCore.so.1.0.0  libFPGADriver.so.1.0.0  libMainWindow.so.1.0  libSDKServices.so.1.0.0  log.config  log4crc  runBoxPlayer.sh  runBoxSDK.sh  wifi.sh
firmware_extract/PX30_D15/System/: BootLogo  BoxDaemon  BoxPlayerInit.sh  BoxUpgrade  InitWayland.sh  reset_config.sh  userCtl.sh
firmware_extract/PX30_D15/SystemConfig/: dev_type  process_info.xml
firmware_extract/PX30_D15/api/: cn.huidu.device.api.sh  cn.huidu.device.service.sh
firmware_extract/PX30_D15/ngrok/: ngrok.cfg
firmware_extract/PX30_D15/ssh/: start-ssh
huidu-player/: Cargo.toml
huidu-player/programs/: demo.xml
huidu-player/src/: main.rs
huidu-player/src/config/: mod.rs
huidu-player/src/core/: player.rs
huidu-player/src/program/: model.rs  parser.rs
huidu-player/src/protocol/: command.rs  discovery.rs  mod.rs  server.rs  session.rs
huidu-player/src/render/: effects.rs  engine.rs  mod.rs
huidu-player/src/render/plugins/: clock.rs  gif.rs  image.rs  mod.rs  text.rs  video.rs
huidu-player/src/services/: brightness.rs  manager.rs  mod.rs  screen_schedule.rs  storage.rs  time_sync.rs  usb_disk.rs
(+20 files in other folders)
